# machine-learning-engineering-for-production-public

course1/week1-ungraded-lab/: client.ipynb  pyproject.toml  server.ipynb
course2/week1-graded-assignment/: C2W1_Assignment.ipynb
